# adk-samples

.github/workflows/: test_templated_agent.yaml
python/agents/academic-research/: pyproject.toml
python/agents/academic-research/academic_research/: agent.py
python/agents/blog-writer/: pyproject.toml
python/agents/gcp-debug-agent/: .gitignore  Makefile  README.md  pyproject.toml
python/agents/gcp-debug-agent/gcp_debug_agent/: __init__.py  agent.py
python/agents/gcp-debug-agent/tests/integration/: test_agent.py
python/agents/gcp-debug-agent/tests/unit/: test_dummy.py
