[project]
name = "gcp-debug-agent"
version = "0.1.0"
description = "Debug agent to explore GCP environment and permissions during CI/CD workflow execution"
authors = [{ name = "Debug Agent", email = "debug@example.com" }]
license = "Apache-2.0"
readme = "README.md"
dependencies = [
    "google-cloud-aiplatform[adk,agent-engines]>=1.117.0",
    "google-genai>=1.9.0",
    "google-cloud-storage>=2.19.0",
    "google-cloud-secret-manager>=2.25.0",
    "google-cloud-resource-manager>=1.14.0",
    "google-auth>=2.36.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "google-adk>=1.0.0",
]
requires-python = ">=3.10,<3.13"

[dependency-groups]
dev = [
    "pytest~=8.4.2",
    "pytest-asyncio~=1.2.0",
    "google-adk[eval]>=1.0.0",
    "nest-asyncio>=1.6.0",
    "agent-starter-pack>=0.14.1",
    "langchain-community>=0.3.25",
    "python-dotenv==1.1.0",
    "stackapi>=0.3.1",
    "toolbox-core==0.1.0",
]

[project.optional-dependencies]
streamlit = [
    "streamlit>=1.30.0",
]
lint = [
    "ruff>=0.4.6",
    "mypy~=1.18.2",
    "codespell~=2.4.1",
    "types-pyyaml~=6.0.12.20240917",
    "types-requests~=2.32.4.20250913",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "W", # pycodestyle warnings
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901"] # ignore line too long, too complex

[tool.ruff.lint.isort]
known-first-party = ["gcp_debug_agent"]

[tool.mypy]
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
follow_imports = "silent"
ignore_missing_imports = true
explicit_package_bases = true
exclude = [".venv"]

[tool.codespell]
skip = "uv.lock,.venv"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.agent-starter-pack]
example_question = "What GCP resources can I access?"

[tool.agent-starter-pack.settings]
agent_directory = "gcp_debug_agent"
deployment_targets = ["agent_engine"]
